apps/docs/v0.2.14/guides/workflows.mdx
---
title: "Workflows"
description: "Write typed Rigkit workflows with tasks, sequences, parallel branches, config, and validated outputs."
noindex: true
---

<Note>
This page is for config authors. If you only run an existing project, use the
[CLI reference](/v0.2.14/reference/cli).
</Note>

A workflow is the setup graph Rigkit can `plan` and `apply`. Tasks run user
code and return JSON `ctx`. That context flows to the next node, is cached, and
becomes the input for workspace creation.

## Config shapes

Use `workflow(...)` to create a typed workflow builder. Add providers where
they become available with `.addProvider(...)`; downstream tasks, workspace
hooks, and operations access them through `providers`.

```ts
import { workflow } from "@rigkit/sdk";
import { freestyle } from "@rigkit/provider-freestyle";

const app = workflow("website");
const freestyleProvider = freestyle.provider();

export const website = app
  .sequence("website")
  .addProvider("freestyle", freestyleProvider)
  .task("prepare", async ({ providers }) => {
    const { vm, vmId } = await providers.freestyle.client.vms.create({
      logger: console.log,
    });

    try {
      const snapshot = await vm.snapshot();
      return { ctx: { snapshotId: snapshot.snapshotId } };
    } finally {
      await providers.freestyle.client.vms.delete({ vmId });
    }
  });
```

Export multiple workflow nodes when one `rigkit/index.ts` owns more than one
setup graph. Reuse the same provider definition value at each point where it
should enter a sequence:

```ts
import { workflow } from "@rigkit/sdk";
import { freestyle } from "@rigkit/provider-freestyle";

const services = workflow("services");
const freestyleProvider = freestyle.provider();

export const api = services
  .sequence("api")
  .addProvider("freestyle", freestyleProvider)
  .task("prepare-api", async ({ providers }) => {
    const { vm, vmId } = await providers.freestyle.client.vms.create({
      logger: console.log,
    });
    await providers.freestyle.client.vms.delete({ vmId });
    return { ctx: { packageName: "@acme/api" } };
  });

export const web = services
  .sequence("web")
  .task("prepare-web", async () => ({
    ctx: { packageName: "@acme/web" },
  }));
```

Provider scope is lexical. A task only sees providers added before that task in
the chain. Adding or changing a provider invalidates cache for the tasks,
workspace hooks, and operations that have that provider in scope, not unrelated
earlier work. This is useful for operation-only providers such as cmux:

```ts
export const website = app
  .sequence("website")
  .addProvider("freestyle", freestyleProvider)
  .add(websiteSetup)
  .workspace({ create, remove })
  .addProvider("cmux", cmux.provider())
  .workspaceOperation("open-cmux", openCmux);
```

The default interactive path can omit `--workflow`; Rigkit prompts when a
workflow choice is needed. Pass `--workflow` when selecting a specific workflow,
especially in JSON and other non-interactive runs:

```sh
rig plan --workflow api
rig apply --workflow web
rig create --workflow api dev
```

## Task context

Task output replaces the incoming context. Spread `step.ctx` when you want to
preserve previous values:

```ts
const setup = app
  .sequence("setup")
  .task("clone", async () => ({
    ctx: {
      repoPath: "/workspace/app",
    },
  }))
  .task("install", async ({ step }) => ({
    ctx: {
      ...step.ctx,
      devPort: 3000,
    },
  }));
```

Task outputs must be JSON-serializable. Return durable values such as
`snapshotId`, `vmId`, `repoPath`, ports, branch names, and provider artifact
refs. Do not return live SDK clients, functions, streams, or process handles.

`.task(...)` and `.step(...)` are aliases. Prefer `.task(...)` in new configs.

## Compose nodes

Sequences are reusable nodes. Store them in variables, export them from helper
files, and add them to larger workflows:

```ts
const base = app
  .sequence("base")
  .task("install-tooling", async () => ({
    ctx: { snapshotId: "snap_base" },
  }));

const repo = app
  .sequence<{ snapshotId: string }>("repo")
  .task("clone-repo", async ({ step }) => ({
    ctx: {
      ...step.ctx,
      repoPath: "/workspace/app",
    },
  }));

export const website = app
  .sequence("website")
  .add(base)
  .add(repo);
```

TypeScript checks the context contract. In the example above, `repo` cannot be
added before a node that produces `snapshotId`.

## Run branches in parallel

Use `.parallel(...)` for independent branches that start from the same incoming
context. The joined output is namespaced by branch name:

```ts
const source = app.sequence<{ snapshotId: string }>("source").task(
  "clone",
  async ({ step }) => ({
    ctx: {
      ...step.ctx,
      repoPath: "/workspace/app",
    },
  }),
);

const database = app.sequence<{ snapshotId: string }>("database").task(
  "branch-db",
  async ({ step }) => ({
    ctx: {
      ...step.ctx,
      databaseUrl: "postgres://...",
    },
  }),
);

export const setup = app
  .sequence("setup")
  .task("base", async () => ({ ctx: { snapshotId: "snap_base" } }))
  .parallel({
    source,
    database,
  })
  .task("join", async ({ step }) => ({
    ctx: {
      snapshotId: step.ctx.source.snapshotId,
      repoPath: step.ctx.source.repoPath,
      databaseUrl: step.ctx.database.databaseUrl,
    },
  }));
```

Branch names must not conflict with keys already present in the incoming
context.

## Configure reusable nodes

`.configure(...)` attaches JSON config to a node. Config stacks merge shallowly,
and handlers read the merged object through `config`:

```ts
const serviceSetup = app
  .sequence("service")
  .configure({
    packageName: "@acme/api",
    sourceDir: "services/api",
    devCommand: "pnpm --filter @acme/api dev",
  })
  .task("install-service", async ({ config, step }) => ({
    ctx: {
      ...step.ctx,
      service: {
        packageName: String(config.packageName),
        sourceDir: String(config.sourceDir),
        devCommand: String(config.devCommand),
      },
    },
  }));
```

Config is part of the cache key and global fragment hash. Changing it reruns the
affected work.

## Validate output

Pass an `output` schema when cached context must keep a stable shape. The schema
can expose `parse` or `safeParse`, so Zod works:

```ts
import { z } from "/sdk";

const prepared = app.sequence("prepared").task(
  "prepare",
  {
    output: z.strictObject({
      snapshotId: z.string(),
      repoPath: z.string(),
    }),
  },
  async () => ({
    ctx: {
      snapshotId: "snap_123",
      repoPath: "/workspace/app",
    },
  }),
);
```

Fresh invalid output fails the task. Cached invalid output is ignored and the
task reruns.

## Control caching

Use `cacheTTL` when output expires:

```ts
.task(
  "check-auth",
  { cacheTTL: "30m" },
  async ({ step }) => ({ ctx: step.ctx }),
)
```

Supported string units are `ms`, `s`, `m`, `h`, and `d`. `cacheTTL: 0` makes a
task run on every apply.

Use cache commands for manual control:

```sh
rig cache invalidate install-dependencies
rig cache invalidate --all
rig cache clear --local
```

## Logs and metadata

Task `console.log`, `console.info`, `console.debug`, `console.warn`, and
`console.error` are captured by the runtime and streamed to the CLI. Provider
SDKs that accept a logger should receive `console.log`:

```ts
await freestyle.client.vms.create({
  logger: console.log,
});
```

Use `step.metadata(...)` for structured run metadata:

```ts
.task("prepare", async ({ step }) => {
  step.metadata({ repo: "freestyle-sh/rigkit" });
  return { ctx: { repoPath: "/workspace/rigkit" } };
});
```
